@@ -7,5 +7,36 @@
 documents have not yet fully been written.  So while some pages are available,
 this one isn't.  If you'd like to contribute to
 the Pooka documentation, please contact akp@sourceforge.net.</p>
+
+<h1>Composing email in Pooka</h1>
+
+<p>The next thing that you will want to do with Pooka is to send an email.  
+This is because, if you have a new email account, you might not actually
+have any mail available to you yet.  If you would like to skip ahead to 
+reading your mail, go to <a href = "./reading.html">Reading email in Pooka</a>.
+</p>
+
+<p>To send an email, first you click on the Create a New Message button in
+your toolbar.  (You can also create a new message by going to the 
+Mail menu and choosing New Message, or by pressing Control-S.)  A window will
+appear.  This is the new message composition window.  It has two areas of
+interest:  a set of fields which are used to fill out the envelope information
+for the message, and a large text field which is used for the content of the
+message.</p>
+
+<p>The evelope information panels consists of the following fields:</p>
+
+<dl>
+<dt>User</dt>
+<dd></dd>
+<dt>To</dt>
+<dd></dd>
+<dt>CC</dt>
+<dd></dd>
+<dt>BCC</dt>
+<dd></dd>
+<dt>Subject</dt>
+<dd></dd>
+
 </body>
 </html>
